# NeuroJet

./: .cproject  .gitignore  .project  ActiveConnect.hpp  ArgFuncts.cpp  ArgFuncts.hpp  BindList.hpp  CMakeLists.txt  Calc.cpp  Calc.hpp  DataTypes.hpp  Filter.hpp  GenericData.hpp  Interneuron.cpp  Interneuron.hpp  Makefile  Matlab.hpp  MatrixMeanHelper.hpp  MatrixMomentHelper.hpp  MatrixSSHelper.hpp  MatrixSumHelper.hpp  NeuroJet.cpp  NeuroJet.hpp  NeuronType.hpp  Noise.cpp  Noise.hpp  Output.cpp  Output.hpp  Parallel.cpp  Parallel.hpp  ParallelRand.cpp  ParallelRand.hpp  Parser.cpp  Parser.hpp  Population.cpp  Population.hpp  Program.cpp  Program.hpp  README.md  SimState.hpp  (+10 more)
Attic/: Makefile
Attic/TI/: Block.nj  TI.CheckContinue.nj  TI.nj
Attic/TP/: Block.init.nj  Decision4.nj  Setme.nj  WeightedCoin.init.nj
Attic/matlab/Code/: BOXCAR_SETTINGS.txt
Attic/matlab/DataFiles/: training_103.mat  training_104.mat  training_108.mat  training_116.mat  training_117.mat  training_118.mat  training_119.mat  training_126.mat  training_130.mat  training_138.mat  training_140.mat  training_148.mat  training_18.mat  training_25.mat  training_28.mat  training_3.mat  training_4.mat  training_50.mat  training_54.mat  training_55.mat  training_58.mat  training_59.mat  training_60.mat  training_64.mat  training_66.mat  training_7.mat  training_71.mat  training_78.mat  training_81.mat  training_88.mat  training_9.mat  training_97.mat  training_99.mat
MATLAB_Trace_Conditioning/: Readme.txt
MATLAB_Trace_Conditioning/Code/: BOXCAR_SETTINGS.txt
MATLAB_Trace_Conditioning/DataFiles/: Trace70_rise2_K0history.mat  Trace70_rise2_USactivity.mat  Trace70_rise2_finalweights.mat  Trace70_rise2_surface.mat  testing_151.mat  testing_sequence.mat  training_1.mat  training_10.mat  training_100.mat  training_105.mat  training_106.mat  training_107.mat  training_109.mat  training_112.mat  training_113.mat  training_114.mat  training_12.mat  training_120.mat  training_121.mat  training_122.mat  training_123.mat  training_125.mat  training_127.mat  training_128.mat  training_129.mat  training_13.mat  training_132.mat  training_134.mat  training_136.mat  training_139.mat  training_14.mat  training_141.mat  training_143.mat  training_144.mat  training_145.mat  training_146.mat  training_147.mat  training_149.mat  training_15.mat  training_150.mat  (+56 more)
TI/: CommonSettings.nj  CreateTIVariables.nj  Decision4.init.nj  Setalpha.nj  sweepTI
TP/: CommonSettings.nj  CreateTPVariables.nj  TP.nj  TP_short.nj  WeightedCoin.nj
Test/: ArgFunctsTest.cpp  CMakeLists.txt  GenericDataTest.cpp  NoiseTest.cpp  StringTest.cpp  testArrayAlg.cpp  testQueue.cpp  testValArray.cpp  testVec.cpp
matlab/: Readme.txt
matlab/DataFiles/: Trace70_rise2_Acthistory.mat  training_101.mat  training_102.mat  training_11.mat  training_110.mat  training_111.mat  training_115.mat  training_124.mat  training_131.mat  training_133.mat  training_135.mat  training_137.mat  training_142.mat  training_16.mat  training_29.mat  training_32.mat  training_39.mat  training_47.mat  training_49.mat  training_51.mat  training_70.mat  training_72.mat  training_79.mat  training_8.mat  training_86.mat  training_87.mat  training_91.mat  training_94.mat  training_96.mat
neural/: NeuronType.cpp  NeuronType.hpp  Synapse.cpp  Synapse.hpp  SynapseType.cpp
src/: BindList.hpp  CMakeLists.txt  Filter.hpp  MatrixMeanHelper.hpp  MatrixSSHelper.hpp  MatrixSumHelper.hpp  NeuroJet.cpp  NeuroJet.hpp  Noise.cpp  Output.hpp  Parallel.cpp  Parser.cpp  Program.cpp  State.hpp  Symbols.hpp  SystemVar.hpp  WeightAnalysis.hpp
src/main/: CMakeLists.txt
src/main/c++/: ArgFuncts.hpp  DataTypes.hpp  MatrixMeanHelper.hpp  MatrixMomentHelper.hpp  MatrixSSHelper.hpp  NeuroJet.hpp  Noise.hpp  Parallel.cpp  Parallel.hpp  Parser.hpp  State.hpp  SystemVar.cpp  WeightAnalysis.hpp  neurojet_driver.cpp
src/main/c++/neural/: DendriticSynapse.cpp  Interneuron.cpp  NeuronType.hpp
src/neural/: AxonalSynapse.hpp  DendriticSynapse.cpp  DendriticSynapse.hpp  Interneuron.cpp  Interneuron.hpp  NeuronType.cpp  NeuronType.hpp  Synapse.hpp  SynapseType.cpp  SynapseType.hpp
src/test/c++/: ArgFunctsTest.cpp  CMakeLists.txt  NoiseTest.cpp
src/test/c++/neural/: AxonalSynapseTest.cpp  DendriticSynapseTest.cpp  InterneuronTest.cpp
src/utils/: StringUtils.hpp
test/: CMakeLists.txt
test/neural/: AxonalSynapseTest.cpp  InterneuronTest.cpp  NeuronTypeTest.cpp  SynapseTypeTest.cpp
test/utils/: StringUtilsTest.cpp
tools/: NumberDiff.cpp  NumberDiff.h
utils/: StringUtils.cpp  StringUtils.hpp
